# FinanceApp

./: .gitignore  100_GAP_REPORT.md  COMPETITIVE.md  FEATURES.md  LICENSE  MANUAL_TASKS.md  MOBILE_SETUP.md  OPPORTUNITIES.md  POLISH_AUDIT.md  README.md  ROADMAP.md  SCORECARD.md  SCORECARD_FINAL.md  SCORECARD_HONEST.md  SCORECARD_V2.md  SCORECARD_V3.md  SESSION_NOTES.md  SESSION_NOTES_PART2.md  SMOKE_RESULTS.md  STATUS.md  TESTING.md  UI_TEST_RESULTS.md  _start-backend.bat  _start-frontend.bat  _start-mobile.bat  audit-2026-05-05.md  audit-2026-05-06-postwaveC.md  audit-2026-05-06.md  audit-2026-05-07-buttons.md  audit-2026-05-07-postwaveD.md  audit-2026-05-11-post-sprint9.md  audit-2026-05-12-evening.md  audit-2026-05-12-night.md  audit-2026-05-12.md  audit-2026-05-13-evening-post-sprint-h.md  audit-2026-05-13-night-post-sprint-i.md  audit-2026-05-13-night-post-sprint-j.md  audit-2026-05-13-post-wave-g-phase2.md  audit-2026-05-13-post-wave-g.md  audit-2026-05-13.md  (+15 more)
backend/: .env.example  .gitignore  Makefile  _llm_full.py  _llm_test.py  alembic.ini  finance.db.bak-pre-prod-wipe  pyproject.toml  smoke_bc.db-journal  smoke_canonical.db-journal  smoke_credit_score_scrapers.db-journal  smoke_phase_7.db-journal  smoke_phase_b.db-journal
backend/.debug/: smartcredit_dashboard.html  smartcredit_dashboard.txt  target_search.html
backend/.plan_snapshots/: snapshots.json
backend/alembic/: env.py  script.py.mako
backend/finance_app/: __init__.py  config.py  scheduler.py
backend/scripts/: authorize_gmail.py  check_google_play_live.py  debug_smartcredit_html.py  (+29 more)
(+389 files in other folders)
